--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -16,7 +16,7 @@ defaults:
 jobs:
   build:
     name : Test APK
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     
     steps:
       - name : Checkout
