--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -43,3 +43,12 @@ jobs:
       
       - name: Build with Gradle
         run: ./gradlew build
+      
+      - name: Send Slack Bot
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields:  repo,message,commit
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        if: always()
