--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -50,5 +50,5 @@ jobs:
           status: ${{ job.status }}
           fields:  repo,message,commit
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.WEB_HOOK_URL }}
         if: always()
