--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -45,10 +45,10 @@ jobs:
         run: ./gradlew build
       
       - name: Send Slack Bot
-        uses: 8398a7/action-slack@v3
-        with:
-          status: ${{ job.status }}
-          fields:  repo,message,commit
+        uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.WEB_HOOK_URL }}
-        if: always()
+          SLACK_COLOR: '#FF5733'
+          SLACK_TITLE: 'BUILD 성공했지만 실패했다고 테스트'
+          MSG_MINIMAL: true
+          SLACK_MESSAGE: '에러 확인 ㄱㄱㄱ'
