--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -45,9 +45,10 @@ jobs:
         run: ./gradlew build
       
       - name: Send Slack Bot
+        if: ${{ success() }}
         uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.WEB_HOOK_URL }}
+          SLACK_WEBHOOK: ${{ secrets.WEB_HOOK_URL }}
           SLACK_COLOR: '#FF5733'
           SLACK_TITLE: 'BUILD 성공했지만 실패했다고 테스트'
           MSG_MINIMAL: true
